Bug 321499 - Storage Crash because it cannot handle pixmaps as it is not a QApplication
Summary: Storage Crash because it cannot handle pixmaps as it is not a QApplication
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: storage (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-22 15:37 UTC by Martin Klapetek
Modified: 2014-11-04 09:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2013-06-22 15:37:14 UTC
It prints "virtual bool Soprano::Virtuoso::BackendPlugin::isAvailable() const could not find Virtuoso ODBC driver " then crashes.

(gdb) bt
#0  0x00007ffff56ab08a in hasXRenderAndAlpha (this=<synthetic pointer>) at image/qpixmap_x11.cpp:391
#1  QX11PixmapData::fromImage (this=0x7cdca0, img=..., flags=...) at image/qpixmap_x11.cpp:449
#2  0x00007ffff5695e50 in QPixmap::fromImage (image=..., flags=...) at image/qpixmap.cpp:2088
#3  0x00007ffff5697208 in operator>> (stream=..., pixmap=...) at image/qpixmap.cpp:1371
#4  0x00007ffff69d03fd in KIconLoaderPrivate::findCachedPixmapWithPath (this=0x71a970, key=..., data=..., path=...) at ../../kdeui/icons/kiconloader.cpp:870
#5  0x00007ffff69d291d in KIconLoader::loadIcon (this=0x733730, _name=..., group=group@entry=KIconLoader::Desktop, size=32, state=0, overlays=..., 
    path_store=path_store@entry=0x0, canReturnNull=canReturnNull@entry=false) at ../../kdeui/icons/kiconloader.cpp:1149
#6  0x00007ffff69ca59f in KIconEngine::pixmap (this=<optimized out>, size=..., mode=<optimized out>, state=<optimized out>) at ../../kdeui/icons/kiconengine.cpp:104
#7  0x00007ffff5668425 in QIcon::pixmap (this=<optimized out>, size=..., mode=<optimized out>, state=<optimized out>) at image/qicon.cpp:684
#8  0x000000000041904d in QIcon::pixmap (this=0x7fffffffd830, w=32, h=32, mode=QIcon::Normal, state=QIcon::Off) at /usr/include/qt4/QtGui/qicon.h:84
#9  0x000000000041718d in Nepomuk2::Repository::open (this=0x6efcf0) at /home/mck182/Work/nepomuk-core/services/storage/repository.cpp:131
#10 0x0000000000418ad0 in Nepomuk2::Repository::qt_static_metacall (_o=0x6efcf0, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x6f0060)
    at /home/mck182/Work/nepomuk-core/build/services/storage/repository.moc:70
#11 0x00007ffff62345be in QObject::event (this=0x6efcf0, e=<optimized out>) at kernel/qobject.cpp:1194
#12 0x00007ffff621a63e in QCoreApplication::notifyInternal (this=0x7fffffffdde0, receiver=receiver@entry=0x6efcf0, event=event@entry=0x6efc90)
    at kernel/qcoreapplication.cpp:946
#13 0x00007ffff621e171 in sendEvent (event=0x6efc90, receiver=0x6efcf0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#14 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x6bded0) at kernel/qcoreapplication.cpp:1570
#15 0x00007ffff621e4a3 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1463
#16 0x00007ffff6248e83 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#17 postEventSourceDispatch (s=0x6c1b30) at kernel/qeventdispatcher_glib.cpp:279
#18 0x00007ffff1238f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007ffff1239248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007ffff1239304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007ffff6249016 in QEventDispatcherGlib::processEvents (this=0x6bf830, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#22 0x00007ffff621938f in QEventLoop::processEvents (this=this@entry=0x7fffffffdd50, flags=...) at kernel/qeventloop.cpp:149
#23 0x00007ffff6219618 in QEventLoop::exec (this=this@entry=0x7fffffffdd50, flags=...) at kernel/qeventloop.cpp:204
#24 0x00007ffff621ecf6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#25 0x0000000000416421 in Nepomuk2::Service2::init<Nepomuk2::Storage> (argc=1, argv=0x7fffffffe028, aboutData=...)
    at /home/mck182/Work/nepomuk-core/libnepomukcore/service/service2.h:126
#26 0x0000000000415105 in main (argc=1, argv=0x7fffffffe028) at /home/mck182/Work/nepomuk-core/services/storage/storage.cpp:335
Comment 1 Vishesh Handa 2013-06-27 10:52:24 UTC
Git commit 463420fe6b2d439e352765a5cb79e118ae4a6d51 by Vishesh Handa.
Committed on 27/06/2013 at 10:43.
Pushed by vhanda into branch 'master'.

NepomukStorage needs to be a QApplication in order to handle pixmaps

M  +1    -1    services/storage/storage.cpp

http://commits.kde.org/nepomuk-core/463420fe6b2d439e352765a5cb79e118ae4a6d51