NepomukStorage needs to be a QApplication in order to handle pixmaps

BUG: 321499